[package]
name = "pastmp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.143"
uuid = { version = "1.18.0", features = ["serde"] }
